--- a/Jock's_Box.ipynb
+++ b/Jock's_Box.ipynb
@@ -6,10 +6,7 @@
       "name": "Jock's Box.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "mount_file_id": "1AC2jJ10O-0AewyktUBZ02N1DIRA_YD7K",
-      "authorship_tag": "ABX9TyPqKyywtBUKJb2mJiJFgnXk",
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jmgjasongardner/DEEPJocksBox/blob/master/Jock's_Box.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -70,7 +57,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -90,7 +77,7 @@
       "source": [
         "nba_complete_df = pd.read_csv(\"/content/2012-18_officialBoxScore.csv\")"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -115,7 +102,7 @@
       "source": [
         "nba_complete_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +692,7 @@
         "\n",
         "proportion_three_pointers.head()"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +746,7 @@
         "# this is the dataframe of proportion wins!\n",
         "proportion_wins_by_team_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +854,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
