New Update: Nov 11, 2020; 2:19 AM

--- a/Jocks'_Box.ipynb
+++ b/Jocks'_Box.ipynb
@@ -48,9 +48,13 @@
         "id": "aajmX6fH6rJV"
       },
       "source": [
-        "**Objective:** Craft a multivariate linear prediction model for the NBA teams' separated by NBA seasons based on various variables\n",
+        "**Objective:** \n",
+        "1. Identify variables that heavily influence the winrate of a game in a season\n",
+        "2. Observe whether the same variables remain consistently impactful over the past few seasons\n",
+        "3. Predict winrate for any given team within a season based on their data prior to February\n",
+        "4. Reason through why our predictions are/are not accurate. \n",
         "\n",
-        "**How:** We need to split the dataset into testing and training data for each season. The split date will be the trade deadlines of the respective seasons. \n",
+        "**How:** We need to split the dataset into testing and training data for each season. The split date will be the trade deadlines of the respective seasons. We will then use the training data to craft a multivariate linear prediction model for the NBA teams' separated by NBA seasons based on various variables. Then, we will predict win rates with our testing data and the model we have created.\n",
         "\n",
         "Our explanatory variables are as follows: \n",
         "1. *teamEDiff*: \n",
@@ -98,7 +102,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn import metrics"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,14 +122,14 @@
       "source": [
         "nba_df = pd.read_csv(\"/2012-18_teamBoxScore.csv\")"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "k9Z5uBTz6HZE",
-        "outputId": "b94a63d8-8463-4a73-89fb-54e90fc56ef0",
+        "outputId": "8f32ae0e-8e82-4543-a11e-09e84fd822be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 338
@@ -134,7 +138,7 @@
       "source": [
         "nba_df.head()"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +685,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 104
         }
       ]
     },
@@ -709,7 +713,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ezouGbaEAuJc",
-        "outputId": "583512af-7b42-4080-89d0-f9590e8a639c",
+        "outputId": "1ac218d6-e762-4e13-da4f-9d9d4a276dd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -758,7 +762,7 @@
         "nba_df.head\n",
         "  \n"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +787,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 105
         }
       ]
     },
@@ -800,7 +804,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zH2E-iFM0T_w",
-        "outputId": "b4315908-4f5f-4ec3-ad1e-2663ff6da1ff",
+        "outputId": "7e43dd93-aeff-4691-bcf5-6c15d039688f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -811,7 +815,7 @@
         "predictor_stats[\"Q4Diff\"] = df[\"teamPTS4\"] - df[\"opptPTS4\"]\n",
         "predictor_stats.head()"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -955,7 +959,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 106
         }
       ]
     },
@@ -988,7 +992,7 @@
         "  Creates a prediction for a given year in the NBA based on a dataframe of team names, explanatory variables, \n",
         "  game season, the type of the data (training vs. testing), and the win/loss of a game represented by 0 or 1. \n",
         "\n",
-        "  Input: season - an integer that represents the season of the played game\n",
+        "  Input: season - an integer that represents the season we are interested in\n",
         "\n",
         "  Output: Prints the coefficients, actual vs. expected, and mse of our linear model.\n",
         "\n",
@@ -1028,7 +1032,7 @@
         "  print(\"===============================================================\")\n",
         "  print()"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1053,7 +1057,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JsOhjIwJLuar",
-        "outputId": "673ab403-c597-40f5-d41e-53542dad6fc1",
+        "outputId": "2b1833bb-6354-4ce0-a7ef-ecd6be436029",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1061,7 +1065,7 @@
       "source": [
         "nba_prediction(2013)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1137,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qw0xlMDuLzl_",
-        "outputId": "78d02558-1637-48e8-c1d9-c8ef77d6a265",
+        "outputId": "0abbe16c-1798-410a-ead4-13f298105a46",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1141,7 +1145,7 @@
       "source": [
         "nba_prediction(2014)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,7 +1217,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fDHzaV8kL5Q5",
-        "outputId": "f8216797-d728-4845-d889-fb3d03db0646",
+        "outputId": "b92f58ce-31f4-4daf-b09e-d0d474bf8766",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1221,7 +1225,7 @@
       "source": [
         "nba_prediction(2015)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1297,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "G6I9aHznMKKp",
-        "outputId": "3f0c8267-ba6a-4358-91ed-583b88a0a964",
+        "outputId": "74d15345-737a-4410-c986-2565b471a64c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1301,7 +1305,7 @@
       "source": [
         "nba_prediction(2016)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1377,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "raQiLIkoMNWh",
-        "outputId": "be45ec25-533e-43a5-e7f0-98a376927007",
+        "outputId": "ea3854ed-3814-46a8-fbfc-53f53d480aa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1381,7 +1385,7 @@
       "source": [
         "nba_prediction(2017)"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,7 +1457,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Mn_EM6w2MPop",
-        "outputId": "589a5412-e7b4-4a7f-bb48-70f1b8c1baeb",
+        "outputId": "a9d85d3b-24d8-4132-cbf5-91b41098ca50",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1461,7 +1465,7 @@
       "source": [
         "nba_prediction(2018)"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1553,7 +1557,34 @@
         "id": "BHZ2GUoGOaRA"
       },
       "source": [
-        ""
+        "**Overview**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xQX-kid4WbDD"
+      },
+      "source": [
+        "**Limitation**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r35hemrjWc8U"
+      },
+      "source": [
+        "**Future Studies**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FsYwjo0WWfsR"
+      },
+      "source": [
+        "**Learned**"
       ]
     }
   ]
